# chsql

./: .gitignore  AUDIT.md  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/chsql/: __init__.py  cli.py  client.py  config.py  errors.py  output.py
src/chsql/skill/: SKILL.md  __init__.py
tests/: test_config.py  test_guard.py  test_output.py  test_resolve.py  test_url.py
