[project]
name = "chsql"
version = "0.1.0"
description = "Agent-friendly ClickHouse query CLI — JSON-first, read-only by default, semantic exit codes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dengshu" }]
keywords = ["clickhouse", "cli", "sql", "agent", "llm"]
dependencies = [
    "clickhouse-driver>=0.2.9",
]

[project.optional-dependencies]
http = ["clickhouse-connect>=0.8"]
dev = ["pytest>=7", "clickhouse-connect>=0.8"]

[project.scripts]
chsql = "chsql.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chsql"]

[tool.hatch.build.targets.wheel.force-include]
"src/chsql/skill/SKILL.md" = "chsql/skill/SKILL.md"
